modification hero a _titres

--- a/sass/Layout/_titres.scss
+++ b/sass/Layout/_titres.scss
@@ -1,6 +1,6 @@
-/* HERO DE LA PAGE PRINCIPALE */
+/* titres DE LA PAGE PRINCIPALE */
 
-.hero {
+.titres {
   background: #d8d8d829;
   margin-top: 0px;
   margin: -16px 0 0 0;
