--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@
 @import "Sass/Layout/main";
 @import "Sass/Layout/subheader";
 @import "Sass/Layout/spinner";
-@import "Sass/Layout/hero";
+@import "Sass/Layout/titres";
 @import "Sass/Layout/box";
 // Pages
 @import "Sass/Pages/container";
