--- a/style.css
+++ b/style.css
@@ -639,18 +639,18 @@ body {
   animation-duration: 3s;
 }
 
-/* HERO DE LA PAGE PRINCIPALE */
-.hero {
+/* titres DE LA PAGE PRINCIPALE */
+.titres {
   background: rgba(216, 216, 216, 0.1607843137);
   margin-top: 0px;
   margin: -16px 0 0 0;
   padding-bottom: 40px;
 }
-.hero__content {
+.titres__content {
   color: black;
   font-family: "Roboto";
 }
-.hero__title {
+.titres__title {
   justify-content: center;
   text-align: center;
   margin: 15px 0px 10px 0px;
@@ -658,7 +658,7 @@ body {
   font-weight: 800;
   padding-top: 22px;
 }
-.hero__subtitle {
+.titres__subtitle {
   text-align: center;
   margin: 0px 15px 10px;
 }
