check color change

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
 @import "Sass/Layout/spinner";
 // Utils
 @import "Sass/Utils/variables";
+@import "Sass/utils/color";
 @import "Sass/Utils/animations";
 // Base
 @import "Sass/Base/reset";
