--- a/style.css
+++ b/style.css
@@ -28,7 +28,12 @@
   animation-duration: 3s;
 }
 
-/* Couleurs */ /*Animation du défilement du menu*/
+/* Couleurs */
+.fa-circle-check {
+  color: white;
+}
+
+/*Animation du défilement du menu*/
 @keyframes appear {
   0% {
     transform: scale(0);
