--- a/style.css
+++ b/style.css
@@ -696,6 +696,10 @@ body {
   width: 40px;
   border-radius: 0px 10px 10px 0px;
 }
+.box__contents:hover .box__check .fa-circle-check {
+  animation-name: rotate;
+  animation-duration: 1s;
+}
 .box__contents:hover .box__contents__left {
   width: calc(100% - 40px);
 }
