--- a/style.css
+++ b/style.css
@@ -695,6 +695,7 @@ body {
 .box__contents:hover .box__check {
   width: 40px;
   border-radius: 0px 10px 10px 0px;
+  transition: margin-right 1s;
 }
 .box__contents:hover .box__check .fa-circle-check {
   animation-name: rotate;
