--- a/style.css
+++ b/style.css
@@ -28,12 +28,7 @@
   animation-duration: 3s;
 }
 
-/* Couleurs */
-.fa-circle-check {
-  color: white;
-}
-
-/*Animation du défilement du menu*/
+/* Couleurs */ /*Animation du défilement du menu*/
 @keyframes appear {
   0% {
     transform: scale(0);
@@ -296,6 +291,11 @@ body {
   opacity: 1;
   animation: flash 1.5s;
   box-shadow: 5px 15px 21px rgba(0, 0, 0, 0.5019607843);
+}
+
+/* Icon cercle */
+.fa-circle-check {
+  color: white;
 }
 
 .footer {
