--- a/style.css
+++ b/style.css
@@ -30,11 +30,13 @@
 
 /* Couleurs */ /*Animation du défilement du menu*/
 @keyframes appear {
-  0% {
-    transform: scale(0);
+  from {
+    opacity: 0;
+    transform: translate3d(0, 30px, 0);
   }
-  100% {
-    transform: scale(1);
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
 .anim-1 {
