--- a/sass/Layout/_section.scss
+++ b/sass/Layout/_section.scss
@@ -18,6 +18,10 @@
         border-radius: 16px;
         height: 62px;
         position: relative;
+        
+        &--color3 {
+          background-color: #9256dc3b;
+        }
   
         &__number {
           padding: 1px 5px;
