--- a/style.css
+++ b/style.css
@@ -76,10 +76,12 @@
   left: 50%;
   transform: translateX(-50%);
   bottom: 0;
+  color: transparent;
   font-size: 0px;
-  color: #9356DC;
   font-weight: bold;
   transition-duration: 0.5s;
+  background: linear-gradient(0deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  -webkit-background-clip: text;
 }
 
 /* Animation du loader */
