les "..." pour les titres des menus

--- a/sass/Layout/_box.scss
+++ b/sass/Layout/_box.scss
@@ -41,6 +41,9 @@
     }
     
     &__title {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
       font-weight: 800;
     }
 
